--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "electron-prebuilt": "^0.37.2",
     "fibers": "^1.0.13",
     "htmlparser2": "^3.9.0",
-    "jquery": "^2.2.2",
+    "jquery": "~>3.0.0",
     "json-loader": "^0.5.4",
     "node-notifier": "^4.5.0",
     "react": "^0.14.7",
